[package]
name = "rpix"
version = "0.1.6"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["default"] }
flate2 = "1.1"
base64 = "0.22"
crossterm = "0.29"
anyhow = "1.0"
atty = "0.2"
tempfile = "3.24.0"

resvg = { version = "0.46", optional = true }
usvg = { version = "0.46", optional = true }
tiny-skia = { version = "0.11", optional = true }
pdfium-render = { version = "0.8", optional = true }
headless_chrome = { version = "1.0", features = ["fetch"], optional = true }
directories = { version = "6.0.0", optional = true }

[features]
svg = ["dep:resvg", "dep:usvg", "dep:tiny-skia"]
pdf = ["dep:pdfium-render"]
html = ["dep:headless_chrome", "dep:directories"]
office = ["html"]

default = ["svg", "pdf"]
broad = ["default", "html"]
all = ["broad", "office"]

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
